--- a/src/classes/AvailabilityVFController.cls
+++ b/src/classes/AvailabilityVFController.cls
@@ -12,14 +12,13 @@ public with sharing class AvailabilityVFController {
         // Get teamId param safely
         String rawTeamId = ApexPages.currentPage().getParameters().get('teamId');
         if (rawTeamId != null) {
-            rawTeamId = rawTeamId.escapeXml();
+            rawTeamId = String.escapeSingleQuotes(rawTeamId).escapeXml();
         }
-
-        if (String.isNotBlank(rawTeamId) && Pattern.matches('[a-zA-Z0-9]{15,18}', rawTeamId)) {
-            // Safe for SOQL and limited to valid Id characters
-            teamId = String.escapeSingleQuotes(rawTeamId);
+        // Validate format: only Salesforce Id characters, length 15 or 18
+        if (String.isNotBlank(rawTeamId) && Pattern.matches('^[a-zA-Z0-9]{15,18}$', rawTeamId)) {
+            teamId = rawTeamId;
         } else {
-            teamId = null; // or handle invalid input
+            teamId = null; // invalid input handled
         }
 
         if (String.isNotBlank(teamId) && Schema.SObjectType.Team__c.isAccessible()) {
